HTML 이미지 주소 변환

--- a/iOSPromotion.html
+++ b/iOSPromotion.html
@@ -1,8 +1,10 @@
 <p><h1 id="tankdpsheal">탱딜힐 서바이벌 iOS 프로모션 코드 등록 방법</h1></p>
 <p>안녕하세요! 게임을 플레이해주셔서 감사합니다. 아래는 프로모션 코드 등록 방법입니다.</p>
-
-<p><img src="https://github.com/hyoza/TankDPSHeal/IMG_0007.PNG" alt="1. Appstore 앱을 실행합니다. 그리고 가장 하단으로 가서 코드교환을 누릅니다." width="300"></p>
-<p><img src="https://github.com/hyoza/TankDPSHeal/IMG_0008.PNG" alt="2. 수동으로 코드입력을 누르고, 드린 코드를 입력합니다!" width="300"></p>
-<p><img src="https://github.com/hyoza/TankDPSHeal/IMG_0009.PNG" alt="3. 프로모션 코드를 사용합니다." width="300"></p>
+<p>1. Appstore 앱을 실행합니다. 그리고 가장 하단으로 가서 코드교환을 누릅니다.<p>
+<p>2. 수동으로 코드입력을 누르고, 드린 코드를 입력합니다!<p>
+<p>3. 프로모션 코드를 사용합니다.<p>
+<p><img src="https://raw.githubusercontent.com/hyoza/TankDPSHeal/main/IMG_0007.PNG" alt="1. Appstore 앱을 실행합니다. 그리고 가장 하단으로 가서 코드교환을 누릅니다." width="300">
+<img src="https://raw.githubusercontent.com/hyoza/TankDPSHeal/main/IMG_0008.PNG" alt="2. 수동으로 코드입력을 누르고, 드린 코드를 입력합니다!" width="300">
+<img src="https://raw.githubusercontent.com/hyoza/TankDPSHeal/main/IMG_0009.PNG" alt="3. 프로모션 코드를 사용합니다." width="300"></p>
 
 <p>감사합니다 고맙습니다.</p>
